# Home_Work_Web_12_14

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 791fec0ba0da_initial.py  f0d530a47a80_initial.py
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16389  16392  2579  2606  2608  2610  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
src/database/: db.py
src/repository/: todos.py  users.py
src/routes/: auth.py  todos.py  users.py
src/schemas/: todo.py  user.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: verify_email.html
src/templates/: index.html
tests/: test.db  test_auth.py  test_e2e_auth.py  test_todos.py  test_unit_repository_todo.py
