[tool.poetry]
name = "home-work-web-13"
version = "0.1.0"
description = "my home work"
authors = ["andriymyr <andriymyr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
libgravatar = "^1.0.4"
fastapi = "^0.109.1"
fastapi-limiter = "^0.1.6"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
